--- a/3/3.md
+++ b/3/3.md
@@ -193,9 +193,7 @@ monstr Best = Vasia.the_best(Super);
 
 # Конструкторы
 
-Конструктор предназначены для инициаизации объекта.
-
-Конструктор всегда вызывается автоматически при создании объекта.
+Конструктор предназначены для инициаизации объекта. Конструктор всегда вызывается автоматически при создании объекта.
 
 Конструктор обладает следующими свойствами
 
