--- a/_posts/2020-11-02-index.md
+++ b/_posts/2020-11-02-index.md
@@ -28,38 +28,77 @@
 Пример
 
 ```cpp
+#include <iostream>
+using namespace std;
+
 class Person
 {
     public:
-        void operator ++()
+        Person()
         {
-            ++age;
+            this->age = 0;
+        }
+        void operator++()
+        {
+            ++(this->age);
+        }
+    
+        void print()
+        {
+            cout << this->age << endl;
         }
     protected:
         int age;
-        //...
 };
 
 int main()
 {
     Person John;
+    John.print(); //0
+
     ++John;
+    John.print(); //1
+
+    ++John;
+    John.print(); //2
+
     return 0;
 }
 ```
 
-второй случай
+Console out:
+
+```
+0
+1
+2
+```
+
+Второй случай:
 
 ```cpp
+#include <iostream>
+using namespace std;
+
 class Person
 {
+    public:
+        Person()
+        {
+            this->age = 0;
+        }
+
+        void print()
+        {
+            cout << this->age << endl;
+        }
     protected:
         int age;
         //...
-        friend void operator ++ (Person&);
+        friend void operator++(Person&);
 };
 
-void operator ++ (Person& oB)
+void operator++ (Person& oB)
 {
     ++oB.age;
 }
@@ -67,9 +106,24 @@ void operator ++ (Person& oB)
 int main()
 {
     Person John;
+    John.print(); //0
+
     ++John;
+    John.print(); //1
+
+    ++John;
+    John.print(); //2
+    
     return 0;
 }
+```
+
+Console out:
+
+```
+0
+1
+2
 ```
 
 ## Перегрузка операции `++` и `--`
@@ -78,34 +132,47 @@ int main()
 
 Префиксная форма определяется следующим образом
 
-```
-operator ++();
-operator --();
+```cpp
+operator++();
+operator--();
 ```
 
 Постфиксная определяется следующим образом
 
-```
-operator ++(int);
-operator --(int);
+```cpp
+operator++(int);
+operator--(int);
 ```
 
-Указания параметра int в постфиксной форме не специфицирует второй операнд, п используется только для отличия от префиксной формы.
+Указания параметра `int` в постфиксной форме не специфицирует второй операнд, и используется только для отличия от префиксной формы.
 
 Пример реализации префиксной и постфиксной формы операции `++`:
 
 ```cpp
+#include <iostream>
+using namespace std;
+
 class Person
 {
     public:
-        void operator ++()
+        Person()
         {
-            ++age;
+            this->age = 0;
+        }
+
+        void print()
+        {
+            cout << this->age << endl;
+        }
+
+        void operator++()
+        {
+            ++(this->age);
         }
 
         void operator++(int)
         {
-            age++;
+            (this->age)++;
         }
 
     protected:
@@ -115,14 +182,27 @@ class Person
 int main()
 {
     Person John;
+    John.print(); //0
+
     ++John;
+    John.print(); //1
+
     John++;
+    John.print(); //2
 
     return 0;
 }
 ```
 
-Перегрузка бинарных операторов
+Console out:
+
+```
+0
+1
+2
+```
+
+## Перегрузка бинарных операторов
 
 Пример перегрузки
 
@@ -135,12 +215,12 @@ class String
 {
     public:
         String(const char*);
-        const char* operator +(const char* rvalue);
-        void operator +=(const char* rvalue);
-        void operator +=(String& rvalue);
+        const char* operator+(const char* rvalue);
+        void operator+=(const char* rvalue);
+        void operator+=(String& rvalue);
         void print()
         {
-            cout << data;
+            cout << data << endl;
         }
         const char* get_data() {
             return data;
@@ -154,12 +234,12 @@ String::String(const char* str)
     strcpy(data, str);
 }
 
-void String::operator +=(const char* rvalue)
+void String::operator+=(const char* rvalue)
 {
     strcat(data, rvalue);
 }
 
-void String::operator +=(String& rvalue)
+void String::operator+=(String& rvalue)
 {
     strcat(data, rvalue.get_data());
 }
@@ -168,10 +248,14 @@ int main()
 {
     String MyStr1 = "StringOne",
            MyStr2 = "StringTwo";
-
+    MyStr1.print(); //StringOne
+    
     MyStr1 += MyStr2;
-    MyStr1.print();
+    MyStr1.print(); //StringOneStringTwo
+
     MyStr1 += "1111";
+    MyStr1.print(); //StringOneStringTwo1111
+
     return 0;
 }
 ```
@@ -179,41 +263,7 @@ int main()
 Console Out:
 
 ```
+StringOne
 StringOneStringTwo
+StringOneStringTwo1111
 ```
-
-# Python
-
-Интерпретированный язык программирования
-
-Встроенные типы
-
-Все данные в Python представлены объектами
-
-Имена являются лишь сслыками на эти объекты и не несут нагрузку по декларации типа
-
-Значение встроенных типов имеют специальную поддерку в синтаксисе языках.
-
-Объекты могут быть не изменчивыми и изменчивыми.
-
-## Встроеные типы
-1. Специальные типы `None`, `NotImplemented`, `Ellipsis`
-
-2.  Числа
-- целые `int`
-- целые произвольной `long`
-- логические `bool`
-- числа с плавающей точкой `float`
-- комплексное число `complex`
-
-3. Последовательности
-- не изменчивые строка str, unicode строка, tuple
-- изменчивые
-
-4. Картедж
-- изменчивые - список `list`
-- не изменчивые
-
-5. Отображения - словарь - `dict`
-
-6. Объекты которые можно вызывать
