add page breaks

--- a/_posts/2020-11-02-index.md
+++ b/_posts/2020-11-02-index.md
@@ -74,6 +74,8 @@ Console out:
 2
 ```
 
+<div style="page-break-after: always;"></div>
+
 Второй случай:
 
 ```cpp
@@ -125,6 +127,8 @@ Console out:
 1
 2
 ```
+
+<div style="page-break-after: always;"></div>
 
 ## Перегрузка операции `++` и `--`
 
@@ -201,6 +205,8 @@ Console out:
 1
 2
 ```
+
+<div style="page-break-after: always;"></div>
 
 ## Перегрузка бинарных операторов
 
