--- a/_posts/2020-10-26-index.md
+++ b/_posts/2020-10-26-index.md
@@ -34,14 +34,28 @@ class MyClass
 
 class Class: public MyClass
 {
-    void printHello()
-    override
-    {
-        cout << "Hello";
-    }
+    public:
+        void printHello()
+        override
+        {
+            cout << "Hello" << endl;
+        }
 };
+
+int main()
+{
+    Class q;
+    q.printHello(); //Hello
+
+    return 0;
+}
 ```
 
+Console out:
+
+```
+Hello
+```
 
 ```cpp
 #include <iostream>
@@ -60,17 +74,16 @@ class square: public figure
     public:
         void show_area()
         {
-            cout << "";
+            cout << "-" << endl;
         }
 };
-
 
 class triangle: public figure
 {
     public:
         void show_area()
         {
-            cout << x * 0.5 * y;
+            cout << x * 0.5 * y << endl;
         }
 };
 
@@ -80,11 +93,20 @@ int main()
     triangle t;
     square s;
     p = &t;
-    p->show_area();
+    p->show_area(); //0
+
     p = &s;
-    p->show_area();
+    p->show_area(); //-
+
     return 0;
 }
+```
+
+Console out:
+
+```
+0
+-
 ```
 
 # Перегрузка операций
@@ -155,16 +177,21 @@ int main()
 Запишем пример. В данном примере не будет предусмотрен контроль самоприсваивания.
 
 ```cpp
+#include <iostream>
+#include <cstring>
+using namespace std;
+
 class st
 {
     public:
-        st &operator = (st f);
+        st& operator=(st& f);
+
     protected:
         char *p;
         int len;
-}
+};
 
-st &st::operator = (st &ob)
+st& st::operator=(st& ob)
 {
     if(this == &ob)
     {
@@ -177,33 +204,32 @@ st &st::operator = (st &ob)
         p = new char[ob.len + 1];
         if(!p)
         {
-            cout << "Error";
+            cout << "Error" << endl;
             exit(1);
         }
     }
 
-    len = ob.len; //
+    len = ob.len;
     strcpy(p, ob.p);
 
     return *this;
 }
+
+int main()
+{
+    st x;
+
+    return 0;
+}
 ```
 
+Console out:
+
 ```
-ту что-то дичь
+
 ```
 
 В данном примере выесняется не происходит ли самоприсваивание. Если произошло самоприсваивание, то возвращает ссылку на объект.
-
-
-
-
-
-
-
-
-
-
 
 Далее проверяем `if(len < ob.len)` достаточно ли памяти в объекта стоящего слева от знака присваниявания. Если не достаточно, ты мы выделяем новую память, при этом старую память высвобождаем.
 
@@ -220,5 +246,3 @@ st &st::operator = (st &ob)
 - не занимает памяти
 
 Это происхожит потому что использование ссылок исклбчает затраты ресурсов связанных с приминением конструктора копирования, в котором будет применения конструктора объекта.
-
-
