--- a/_posts/2020-10-26-index.md
+++ b/_posts/2020-10-26-index.md
@@ -109,6 +109,8 @@ Console out:
 -
 ```
 
+<div style="page-break-after: always;"></div>
+
 # Перегрузка операций
 
 1. следующие операции перегружать нельзя:
