update code and console out on leccture 2020-10-12

--- a/_posts/2020-10-12-index.md
+++ b/_posts/2020-10-12-index.md
@@ -8,53 +8,56 @@ using namespace std;
 
 class X
 {
-protected:
-    int a;
-public:
-    X()
-    {
-        cout << "X";
-        a = 10;
-    }
+    protected:
+        int a;
+    public:
+        X()
+        {
+            cout << "X" << endl;
+            a = 10;
+        }
 };
 
 class Y
 {
-protected:
-    int b;
-public:
-    Y()
-    {
-        cout << "Y";
-        b = 20;
-    }
+    protected:
+        int b;
+    public:
+        Y()
+        {
+            cout << "Y" << endl;
+            b = 20;
+        }
 };
 
 class Z: public X, public Y
 {
-public:
-    Z()
-    {
-        cout << "Z"; 
-    }
-    int make_ab()
-    {
-        return a * b;
-    }
+    public:
+        Z()
+        {
+            cout << "Z" << endl; 
+        }
+        int make_ab()
+        {
+            return a * b;
+        }
 };
 
 int main()
 {
     Z i;
-    cout << i.make_ab();
+    cout << i.make_ab() << endl;
     return 0;
 }
 ```
 
-Console:
+Console out:
 
 ```
-XYZ200
+X
+Y
+Z
+200
 ```
 
 Вывод происходит, так как происходит множественное наследование и содержит конструкторы по умолчанию.
@@ -73,29 +76,29 @@ using namespace std;
 
 class Base
 {
-public:
-    int i;
+    public:
+        int i;
 };
 
 //class d1: public Base
 class d1: virtual public Base
 {
-public:
-    int j;
+    public:
+        int j;
 };
 
 //class d2: public Base
 class d2: virtual public Base
 {
-public:
-    int k;
+    public:
+        int k;
 };
 
 class d3: public d1, public d2 //d3 наследует d1 и d2
 //получается, что в d3 содержится две копии класса Base, поэтому вопрос
 {
-public:
-    int m;
+    public:
+        int m;
 };
 
 int main()
@@ -108,17 +111,22 @@ int main()
     d.m = 40;
     //cout << d.i; // Возникает неопределеность какое и использовать
     // для решения проблемы используем оператор области видимости
-    cout << d.d2::i;
-    cout << d.j << d.k;
-    cout << d.m;
+    cout << d.d2::i << endl;
+    cout << d.j << endl;
+    cout << d.k << endl;
+    cout << d.m << endl;
+
     return 0;
 }
 ```
 
-Console:
+Console out:
 
 ```
-10203040
+10
+20
+30
+40
 ```
 
 Возникает неопределеность какое `i` использовать. Для решения проблемы используем оператор области видимости. Чтобы избежать ситуации, когда мы не хотим, чтобы в классе `d3` содержалось две копии `Base` мы будем применять механизм виртуального базового класса.
