--- a/_posts/2020-12-07-index.md
+++ b/_posts/2020-12-07-index.md
@@ -1,3 +1,4 @@
+
 # Test 3
 
 ## №1
@@ -303,7 +304,6 @@ print(int('ABC', 16))
 
 
 ```python
-
 # Code from the Internet
 def pascal_triangle(n):
     row = [1]
@@ -414,9 +414,9 @@ print('Кортеж:', tup)
     List: [1, 2, 3, 4, 5]
     Tuple:  (1, 2, 3, 4, 5)
     
-    Введите числа через запятую: 6,7,8
-    Список: [6, 7, 8]
-    Кортеж: (6, 7, 8)
+    Введите числа через запятую: 6,7,8,9,10
+    Список: [6, 7, 8, 9, 10]
+    Кортеж: (6, 7, 8, 9, 10)
 
 
 ## №10
@@ -535,7 +535,7 @@ print(get_extension('.abc.def.'))   # raises ValueError
 
     ValueError                                Traceback (most recent call last)
 
-    <ipython-input-215-dd4205b45537> in <module>
+    <ipython-input-12-dd4205b45537> in <module>
          36 
          37 print(get_extension('abc.py'))
     ---> 38 print(get_extension('abc'))  # raises ValueError
@@ -543,7 +543,7 @@ print(get_extension('.abc.def.'))   # raises ValueError
          40 print(get_extension('.abc.def.'))   # raises ValueError
 
 
-    <ipython-input-215-dd4205b45537> in get_extension(filename)
+    <ipython-input-12-dd4205b45537> in get_extension(filename)
          28     filename_parts = filename.split('.')
          29     if len(filename_parts) < 2:  # filename has no dots
     ---> 30         raise ValueError('the file has no extension')
@@ -618,7 +618,7 @@ for i in os.listdir('./'):
         print(i)
 ```
 
-    Untitled.ipynb
+    index.ipynb
 
 
 ## №16
@@ -834,7 +834,7 @@ myList = [
 
 def getListDomens(lst):
     resultLst = []
-    for i in list:
+    for i in myList:
         resultLst.append(i.split('@')[1])
     return resultLst
 
@@ -851,8 +851,16 @@ print(result)
 
 
 ```python
+string = 'Lorem ipsum dolor sit amet07.12.2020consectetur adipisicing elit.'
 
+import re
+result = re.search('\d\d\.\d\d\.\d\d\d\d', string)
+result = result.group(0)
+print(result)
 ```
+
+    07.12.2020
+
 
 ## №26
 
@@ -860,8 +868,23 @@ print(result)
 
 
 ```python
+string = 'Lorem ipsum dolor sit amet consectetur adipisicing elit.'
 
+arr = string.split(' ')
+
+vowels = 'AaEeIiOoUuYyАаЕеЁёИиОоУуЫыЭэЮюЯя'
+
+for i in arr:
+    for j in vowels:
+        if i[0] == j:
+            print(i)
 ```
+
+    ipsum
+    amet
+    adipisicing
+    elit.
+
 
 ## №27
 
@@ -869,8 +892,56 @@ print(result)
 
 
 ```python
+phone1 = '8123456789'
+phone2 = '812345678911111'
+phone3 = '9123456789'
+phone4 = '912345678911111'
+phone5 = '7123456789'
+phone6 = '123'
+
+import re
+def correctPhone(phone):
+    result = bool( re.search('[89]', phone[0]) )
+    if result == False:
+        return False
+    else:
+        result = bool( re.search('[\d]{10}', phone) )
+        if result == False:
+            return False
+        else:
+            if len(phone) > 10:
+                return False
+            else:
+                return True
+    
+result = correctPhone(phone1)
+print(result)
+
+result = correctPhone(phone2)
+print(result)
+
+result = correctPhone(phone3)
+print(result)
+
+result = correctPhone(phone4)
+print(result)
+
+result = correctPhone(phone5)
+print(result)
+
+result = correctPhone(phone6)
+print(result)
+
 
 ```
+
+    True
+    False
+    True
+    False
+    False
+    False
+
 
 ## №28
 
@@ -878,5 +949,12 @@ print(result)
 
 
 ```python
+string = "qqq, wewe. rgrg! gtgt/ gtrgt"
 
+import re
+
+result = re.split('[,.!/]', string)
+print(result)
 ```
+
+    ['qqq', ' wewe', ' rgrg', ' gtgt', ' gtrgt']
