For Test 3 add task 7

--- a/_posts/2020-12-07/index.ipynb
+++ b/_posts/2020-12-07/index.ipynb
@@ -406,6 +406,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Err\n",
+      "-1\n",
+      "\n",
+      "Err\n",
+      "-1\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "[[1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "[[1], [1, 1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "                                             [1, 2, 1]                                              \n",
+      "[[1], [1, 1], [1, 2, 1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "                                             [1, 2, 1]                                              \n",
+      "                                            [1, 3, 3, 1]                                            \n",
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "                                             [1, 2, 1]                                              \n",
+      "                                            [1, 3, 3, 1]                                            \n",
+      "                                          [1, 4, 6, 4, 1]                                           \n",
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "                                             [1, 2, 1]                                              \n",
+      "                                            [1, 3, 3, 1]                                            \n",
+      "                                          [1, 4, 6, 4, 1]                                           \n",
+      "                                        [1, 5, 10, 10, 5, 1]                                        \n",
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1], [1, 5, 10, 10, 5, 1]]\n",
+      "\n",
+      "                                                [1]                                                 \n",
+      "                                               [1, 1]                                               \n",
+      "                                             [1, 2, 1]                                              \n",
+      "                                            [1, 3, 3, 1]                                            \n",
+      "                                          [1, 4, 6, 4, 1]                                           \n",
+      "                                        [1, 5, 10, 10, 5, 1]                                        \n",
+      "                                      [1, 6, 15, 20, 15, 6, 1]                                      \n",
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1], [1, 5, 10, 10, 5, 1], [1, 6, 15, 20, 15, 6, 1]]\n",
+      "\n",
       "[1]\n",
       "[1, 1]\n",
       "[1, 2, 1]\n",
@@ -416,6 +464,42 @@
     }
    ],
    "source": [
+    "# My code\n",
+    "def printPascalTriagle(number):\n",
+    "    def myPrint(arr, n):\n",
+    "        for i in range(n):\n",
+    "            el = arr[i]\n",
+    "            string = str(el)\n",
+    "            formStr = string.center(100, ' ')\n",
+    "            print(formStr)\n",
+    "    \n",
+    "    if number <= 0:\n",
+    "        print('Err')\n",
+    "        return -1\n",
+    "    \n",
+    "    elif number == 1:\n",
+    "        arr = [[1]]\n",
+    "    \n",
+    "    elif number == 2:\n",
+    "        arr = [[1], [1,1]]\n",
+    "    \n",
+    "    else:\n",
+    "        arr = [[1], [1,1]]\n",
+    "        for i in range(2, number):\n",
+    "            arr.append([])\n",
+    "            arr[i].append(1)\n",
+    "            for j in range(len(arr[i-1]) - 1):\n",
+    "                arr[i].append(arr[i-1][j] + arr[i-1][j + 1])\n",
+    "            arr[i].append(1)\n",
+    "            \n",
+    "    myPrint(arr, number)\n",
+    "    return arr\n",
+    "    \n",
+    "for i in range(-1, 8):\n",
+    "    result = printPascalTriagle(i)\n",
+    "    print(result)\n",
+    "    print()\n",
+    "\n",
     "# Code from the Internet\n",
     "def pascal_triangle(n):\n",
     "    row = [1]\n",
