--- a/_posts/2020-12-07/2020-12-07-index.md
+++ b/_posts/2020-12-07/2020-12-07-index.md
@@ -304,6 +304,42 @@ print(int('ABC', 16))
 
 
 ```python
+# My code
+def printPascalTriagle(number):
+    def myPrint(arr, n):
+        for i in range(n):
+            el = arr[i]
+            string = str(el)
+            formStr = string.center(100, ' ')
+            print(formStr)
+    
+    if number <= 0:
+        print('Err')
+        return -1
+    
+    elif number == 1:
+        arr = [[1]]
+    
+    elif number == 2:
+        arr = [[1], [1,1]]
+    
+    else:
+        arr = [[1], [1,1]]
+        for i in range(2, number):
+            arr.append([])
+            arr[i].append(1)
+            for j in range(len(arr[i-1]) - 1):
+                arr[i].append(arr[i-1][j] + arr[i-1][j + 1])
+            arr[i].append(1)
+            
+    myPrint(arr, number)
+    return arr
+    
+for i in range(-1, 8):
+    result = printPascalTriagle(i)
+    print(result)
+    print()
+
 # Code from the Internet
 def pascal_triangle(n):
     row = [1]
@@ -315,6 +351,54 @@ def pascal_triangle(n):
 pascal_triangle(6) 
 ```
 
+    Err
+    -1
+    
+    Err
+    -1
+    
+                                                    [1]                                                 
+    [[1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+    [[1], [1, 1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+                                                 [1, 2, 1]                                              
+    [[1], [1, 1], [1, 2, 1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+                                                 [1, 2, 1]                                              
+                                                [1, 3, 3, 1]                                            
+    [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+                                                 [1, 2, 1]                                              
+                                                [1, 3, 3, 1]                                            
+                                              [1, 4, 6, 4, 1]                                           
+    [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+                                                 [1, 2, 1]                                              
+                                                [1, 3, 3, 1]                                            
+                                              [1, 4, 6, 4, 1]                                           
+                                            [1, 5, 10, 10, 5, 1]                                        
+    [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1], [1, 5, 10, 10, 5, 1]]
+    
+                                                    [1]                                                 
+                                                   [1, 1]                                               
+                                                 [1, 2, 1]                                              
+                                                [1, 3, 3, 1]                                            
+                                              [1, 4, 6, 4, 1]                                           
+                                            [1, 5, 10, 10, 5, 1]                                        
+                                          [1, 6, 15, 20, 15, 6, 1]                                      
+    [[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1], [1, 5, 10, 10, 5, 1], [1, 6, 15, 20, 15, 6, 1]]
+    
     [1]
     [1, 1]
     [1, 2, 1]
